adjust special files's color

--- a/my_theme.yml
+++ b/my_theme.yml
@@ -54,8 +54,8 @@ core:
     font-style: bold
 text:
   special:
-    foreground: background_color
-    background: yellow
+    foreground: yellow
+    # background: yellow
   todo:
     font-style: bold
   licenses:
